# MoodleGrader

./: .travis.yml  Makefile  MoodleGrader.cabal  README.md  appveyor.yml  cabal.mk  stack.mk  stack.yaml
main/: Main.hs
src/: Padelude.hs  Ui.hs
src/Control/: MoodleShow.hs  PrettyShow.hs
src/Data/: AppState.hs  Course.hs  Name.hs
src/Data/AppState/: Monad.hs
src/Driver/: Moodle.hs
src/Driver/Moodle/: Parser.hs
src/Parser/: NameList.hs
src/Util/: BList.hs  List.hs  Text.hs  Vector.hs
test/: Orphans.hs  Spec.hs
test/Test/: AppState.hs
test/Test/AppState/: Monad.hs
test/Test/Util/: Vector.hs
