name:                MoodleGrader
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/qfjp/MoodleGrader#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel J. Pade
maintainer:          djpade@gmail.com
copyright:           2017 Daniel J. Pade
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
Tested-With:         GHC == 7.10.3, GHC == 8.0.1, GHC == 8.0.2, GHC == 8.2.1

library
  hs-source-dirs:      src
  exposed-modules:     Control.PrettyShow
                       Data.AppState
                       -- Data.AppState.Monad
                       Data.Name
                       Driver.Moodle
                       Driver.Moodle.Parser
                       Padelude
                       Parser.NameList
                       Ui
                       Util.Vector
  default-language:    Haskell2010
  ghc-options:         -Wall
  default-extensions:  OverloadedStrings
                     , NoImplicitPrelude
                     , TypeFamilies
  build-depends:       base >= 4.7 && < 5
                     , brick >= 0.18 && < 0.19
                     , bytestring >= 0.10.6.0 && < 0.11
                     , cassava >= 0.4.5.0 && < 0.5
                     , containers >= 0.5.6.2 && < 0.6
                     , data-default >= 0.5.3 && < 0.8
                     , either >= 4.4.1.1 && < 5
                     , microlens >= 0.2.0.0 && < 0.5
                     , microlens-th >= 0.3.0.2 && < 0.4
                     , mtl >= 2.2.1 && < 3
                     , protolude >= 0.1.6 && < 0.3
                     , set-monad >= 0.2 && < 0.3
                     , text >= 1.2.2.0 && < 2
                     , transformers >= 0.4.2.0 && < 0.6
                     , trifecta >= 1.5.2 && < 2
                     , vector >= 0.10.12.3 && < 0.13
                     , vector-algorithms >= 0.7.0.1 && < 0.8
                     , vty >= 5.16 && < 6
                     , webdriver >= 0.8.5 && < 0.9

executable MoodleGrader
  hs-source-dirs:      main
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  OverloadedStrings
                     , NoImplicitPrelude
  build-depends:       MoodleGrader >= 0.1.0.0
                     , base >= 4.7 && < 5
                     , brick >= 0.18 && < 0.19
                     , containers >= 0.5.6.2 && < 0.6
                     , either >= 4.4.1.1 && < 5
                     , protolude >= 0.1.6 && < 0.3
                     , transformers >= 0.4.2.0 && < 0.6

test-suite MoodleGrader-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  ghc-options:          -Wall -fno-warn-orphans
  ghc-options:          -Wall -fno-warn-orphans -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010
  other-modules:        Orphans
                     , Test.AppState
                     --, Test.AppState.Monad
                     , Test.Util.Vector
  default-extensions:  OverloadedStrings
                     , NoImplicitPrelude
  build-depends:       MoodleGrader >= 0.1.0.0
                     , base
                     , brick >= 0.18 && < 0.19
                     , checkers >= 0.4.7 && < 0.5
                     , hspec >= 2.4.4 && < 3
                     , hspec-checkers >= 0.1.0.2 && < 0.2
                     , QuickCheck >= 2.9.2 && < 3
                     , protolude >= 0.1.6 && < 0.3
                     , set-monad >= 0.2 && < 0.3
                     , text >= 1.2.2.0 && < 2
                     , vector >= 0.10.12.3 && < 0.13

source-repository head
  type:     git
  location: https://github.com/qfjp/MoodleGrader
